<resources>
    <string name="app_name">Smartgamepiano</string>
    <string name="title">Miracle Language School and Translation Services</string>
    <string name="About">About us</string>
    <string name="Services">Services</string>
    <string name="Translation">Translation</string>
    <string name="description">Learn a foreign language with us online, from the comfort of your home through Skype, with flexible hours and personalised learning experience.</string>
    <string name="emailAndWebsite">miraclenyelvsuli@gmail.com and www.miraclelanguage.co.uk</string>
</resources>
